# kapi

./: AGENTS.md  Cargo.toml  LICENSE-MIT  README.md  roadmap.md  rustfmt.toml
.opencode/commands/: cmd-create-feature-branch.md  cmd-create-proposal.md  cmd-merge-feature-branch.md
.opencode/skills/kapi-e2e-tests/: SKILL.md
.opencode/skills/openspec-complete-change/: SKILL.md
.opencode/skills/skill-creator/: SKILL.md
docs/: api-reference.md  architecture.md  controller-runtime.md  data-model.md  storage.md  testprompt.md
docs/kapibuild/: controller-patterns.md  kapi-resource-macro.md  project-structure.md  serde-attributes.md  troubleshooting.md  validation-rules.md  workflow.md
kapi-cli/: Cargo.toml  README.md
kapi-cli/src/: config.rs  error.rs  main.rs  output.rs  resolver.rs
kapi-client/: Cargo.toml  README.md
kapi-client/src/: client.rs  error.rs  lib.rs  typed.rs
kapi-controller/: Cargo.toml  README.md
kapi-controller/src/: controller.rs  finalizer.rs  lib.rs  manager.rs  reconciler.rs  workqueue.rs
kapi-core/: Cargo.toml  README.md
kapi-core/src/: error.rs  key.rs  lib.rs  types.rs
kapi-server/: Cargo.toml  README.md
kapi-server/src/: error.rs  lib.rs  main.rs
kapi-server/src/event/: bus.rs  mod.rs
kapi-server/src/object/: finalizer.rs  handler.rs  schema_service.rs  service.rs  types.rs
kapi-server/src/openapi/: components.rs
kapi-server/src/schema/: mod.rs  registry.rs
kapi-server/src/store/: mod.rs  sqlite.rs
kapi-server/tests/: Cargo.toml
kapi-server/tests/src/: controller_runtime.rs  controller_runtime_multi.rs  finalizers.rs  generation_semantics.rs  lib.rs  list_filtering.rs  main.rs  object_labels.rs  optimistic_concurrency.rs  typed_client.rs  watch_events.rs
kapibuild/: Cargo.toml
kapibuild/src/: controller_generate.rs  generate.rs  main.rs
openspec/: config.yaml
openspec/changes/01-kapibuild-init/: design.md  proposal.md  tasks.md
openspec/changes/02-kapibuild-api-create/: proposal.md  tasks.md
openspec/changes/03-kapibuild-api-generate/: tasks.md
openspec/changes/04-kapibuild-typed-client/: design.md  tasks.md
openspec/changes/05-kapibuild-controller-generate/: tasks.md
openspec/changes/2026-05-17-refactor-openapi-module/: design.md  tasks.md
openspec/changes/add-annotations-support/: proposal.md  tasks.md
openspec/changes/add-generation-field/: proposal.md  tasks.md
openspec/changes/add-kapi-server/: design.md  proposal.md  tasks.md
openspec/changes/add-label-selector-watch/: tasks.md
openspec/changes/add-labels-to-objectmeta/: design.md  proposal.md  tasks.md
openspec/changes/add-selectors-to-list/: proposal.md  tasks.md
openspec/changes/add-sqlite-store/: tasks.md
openspec/changes/add-status-subresource/: proposal.md  tasks.md
openspec/changes/c05-kapibuild-controller-generate/: design.md  proposal.md
openspec/changes/controller-runtime-multi/: design.md  tasks.md
openspec/changes/controller-runtime-single/: design.md  proposal.md  tasks.md
openspec/changes/delete-specdata-envelope/: tasks.md
openspec/changes/extract-schema-registry/: proposal.md  tasks.md
openspec/changes/fail-fast-validation/: design.md  proposal.md  tasks.md
openspec/changes/finalizer-support/: design.md  proposal.md  tasks.md
openspec/changes/fix-abstraction-leaks/: design.md  tasks.md
openspec/changes/fix-clippy-warnings/: design.md  proposal.md  tasks.md
openspec/changes/implement-cli/: design.md  proposal.md  tasks.md
openspec/changes/implement-object-store/: tasks.md
openspec/changes/kapi-ecosystem-scaffold/: design.md  tasks.md
openspec/changes/kube-like-watch-semantics/: proposal.md  tasks.md
openspec/changes/lazy-schema-cache/: design.md  proposal.md  tasks.md
openspec/changes/lazy-schema-compilation/: proposal.md
openspec/changes/make-datastore-dumb/: proposal.md  tasks.md
openspec/changes/modular-integration-tests/: tasks.md
openspec/changes/multi-version-schema-support/: design.md  tasks.md
openspec/changes/namespace-as-resource/: proposal.md  tasks.md
openspec/changes/p0-project-scaffold/: design.md  proposal.md  tasks.md
openspec/changes/p1-core-types-and-errors/: tasks.md
openspec/changes/p3-event-bus-and-roadmap-hygiene/: design.md  proposal.md  tasks.md
openspec/changes/p4-p5-meta-schema-object-domain/: design.md  tasks.md
openspec/changes/p8-openapi/: design.md  proposal.md  tasks.md
openspec/changes/p9-integration-tests/: design.md  proposal.md  tasks.md
openspec/changes/refactor-object-model/: design.md  proposal.md  tasks.md
openspec/changes/rename-data-to-spec/: design.md  proposal.md  tasks.md
openspec/changes/require-spec-on-create/: design.md  tasks.md
openspec/changes/schema-nameless-registration/: design.md  tasks.md
openspec/changes/schema-scope-storage-foundation/: design.md  proposal.md  tasks.md
openspec/changes/simplify-main-binary/: design.md  proposal.md  tasks.md
openspec/changes/split-already-exists-error/: design.md  proposal.md  tasks.md
openspec/changes/split-object-metadata/: tasks.md
openspec/changes/split-object-service/: design.md  proposal.md  tasks.md
openspec/changes/store-exists-and-schema-constants/: design.md  proposal.md  tasks.md
openspec/changes/transaction-store-refactor/: design.md  proposal.md  tasks.md
openspec/changes/unify-schema-object-store/: design.md  proposal.md  tasks.md
src/: bootstrap.rs  error.rs  lib.rs  main.rs  namespace.rs  openapi.rs  routes.rs
src/config/: mod.rs
src/event/: bus.rs  mod.rs
src/object/: handler.rs  helpers.rs  mod.rs  schema_service.rs  service.rs  types.rs
src/openapi/: components.rs  mod.rs  paths.rs  swagger.rs
src/schema/: meta_schema.rs  mod.rs  registry.rs  types.rs
src/store/: memory.rs  mod.rs  sqlite.rs
src/validation/: mod.rs
tests/: Cargo.toml
tests/src/: finalizers.rs  generation_semantics.rs  lib.rs  list_filtering.rs  main.rs  namespace.rs  namespace_resource.rs  object_annotations.rs  object_crud.rs  object_labels.rs  optimistic_concurrency.rs  schema_deletion.rs  schema_validation.rs  status_subresource.rs  watch_events.rs
(+276 files in other folders)
