[package]
name = "kapi"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
jsonschema = "0.46"
dashmap = "6"
tokio-stream = { version = "0.1", features = ["sync"] }
futures-util = "0.3"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
utoipa = "5"
utoipa-swagger-ui = "9"
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
base64 = "0.22"
thiserror = "2"
anyhow = "1"
tower = "0.5"
tower-http = { version = "0.6", features = ["trace", "cors"] }

[dev-dependencies]
http-body-util = "0.1"
