[workspace]
members = ["kapi-core", "kapi-server", "kapi-server/tests", "kapi-client", "kapi-cli", "kapi-controller", "kapibuild"]
resolver = "3"

[workspace.package]
version = "0.2.0"
edition = "2024"
rust-version = "1.85"
license = "MIT OR Apache-2.0"
repository = "https://github.com/kidulabs/kapi"
homepage = "https://github.com/kidulabs/kapi"
