[package]
name = "kapi-cli"
version = "0.1.0"
edition = "2024"

[dependencies]
kapi-client = { path = "../kapi-client" }
clap = { version = "4", features = ["derive"] }
clap_complete = "4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
tokio = { version = "1", features = ["full"] }
anyhow = "1"
thiserror = "2"
futures-util = "0.3"
chrono = "0.4"
tempfile = "3"
