[package]
name = "kapi-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Command-line interface for kapi API servers"
keywords = ["kapi", "apiserver", "controlplane"]
categories = ["command-line-utilities"]
readme = "README.md"

[dependencies]
kapi-client = { path = "../kapi-client", version = "0.2.0" }
clap = { version = "4", features = ["derive"] }
clap_complete = "4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
tokio = { version = "1", features = ["full"] }
anyhow = "1"
thiserror = "2"
futures-util = "0.3"
chrono = "0.4"
tempfile = "3"
