[package]
name = "kapi-client"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "HTTP client library for kapi API servers"
keywords = ["kapi", "apiserver", "controlplane"]
categories = ["web-programming::http-client", "network-programming"]
readme = "README.md"

[dependencies]
kapi-core = { path = "../kapi-core", version = "0.2.0" }
reqwest = { version = "0.12", features = ["json", "stream"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
futures-util = "0.3"
eventsource-stream = "0.2"
tokio = { version = "1", features = ["sync"] }

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
