[package]
name = "kapi-controller"
version = "0.1.0"
edition = "2024"

[dependencies]
kapi-client = { path = "../kapi-client" }
kapi-core = { path = "../kapi-core" }
async-trait = "0.1"
tokio = { version = "1", features = ["sync", "time", "macros", "rt", "signal"] }
tracing = "0.1"
futures-util = "0.3"

[dev-dependencies]
serde_json = "1"
chrono = "0.4"
