[package]
name = "kapi-tests"
version = "0.1.0"
edition = "2024"

[lib]
name = "kapi_tests"
path = "src/lib.rs"

[[bin]]
name = "kapi-tests"
path = "src/main.rs"

[dependencies]
kapi-server = { path = ".." }
axum = "0.8"
tokio = { version = "1", features = ["full"] }
serde_json = "1"
futures = "0.3"
tower = { version = "0.5", features = ["util"] }
serde = { version = "1", features = ["derive"] }
http = "1"
http-body-util = "0.1"
bytes = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tempfile = "3"
