[package]
name = "kapi-tests"
version = "0.1.0"
edition = "2024"
publish = false

[lib]
name = "kapi_tests"
path = "src/lib.rs"

[[bin]]
name = "kapi-tests"
path = "src/main.rs"

[dependencies]
kapi-server = { path = "..", version = "0.1.0" }
axum = "0.8"
tokio = { version = "1", features = ["full"] }
serde_json = "1"
futures = "0.3"
tower = { version = "0.5", features = ["util"] }
serde = { version = "1", features = ["derive"] }
http = "1"
http-body-util = "0.1"
bytes = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tempfile = "3"
kapi-controller = { path = "../../kapi-controller", version = "0.1.0" }
kapi-client = { path = "../../kapi-client", version = "0.1.0" }
async-trait = "0.1"
kapi-core = { path = "../../kapi-core", version = "0.1.0" }
